--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
+  },
+  "compilerOptions": {
+    "esModuleInterop": true
   }
 }
